--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
     "@angular/http": "^2.4.0",
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
-    "@angular/router": "^3.4.0",
+    "@angular/router": "^3.4.9",
     "core-js": "^2.4.1",
+    "jquery": "^3.1.1",
+    "ng2-bootstrap": "^1.4.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
   },
