--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.9",
+    "@types/x2js": "0.0.27",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "ng2-bootstrap": "^1.4.0",
     "ng2-file-upload": "^1.2.0",
     "rxjs": "^5.1.0",
+    "x2js": "^3.1.0",
+    "xml2json": "^0.11.0",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
