--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "~4.14.1",
     "express-ejs-layouts": "~2.2.0",
     "express-session": "^1.15.1",
+    "google-maps": "^3.2.1",
     "jsdom": "^9.11.0",
     "mongoose": "~4.8.5",
     "morgan": "~1.7.0",
