--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,12 @@
     "@angular/router": "^3.4.9",
     "@types/x2js": "0.0.27",
     "angular2-google-maps": "^0.17.0",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
+    "google-maps": "^3.2.1",
     "jquery": "^3.1.1",
     "ng2-bootstrap": "^1.4.0",
+    "ng2-charts": "^1.5.0",
     "ng2-file-upload": "^1.2.0",
     "rxjs": "^5.1.0",
     "x2js": "^3.1.0",
