--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "ng2-bootstrap": "^1.4.0",
     "ng2-charts": "^1.5.0",
     "ng2-file-upload": "^1.2.0",
+    "ng2-google-charts": "^1.0.1",
     "rxjs": "^5.1.0",
     "x2js": "^3.1.0",
     "xml2json": "^0.11.0",
